--- a/composer.json
+++ b/composer.json
@@ -1,36 +1,50 @@
 {
-  "name": "spiral/migrations",
-  "type": "library",
-  "description": "Database migrations, migration scaffolding",
-  "license": "MIT",
-  "authors": [
-    {
-      "name": "Anton Titov / Wolfy-J",
-      "email": "wolfy.jd@gmail.com"
-    }
-  ],
-  "require": {
-    "php": ">=7.2",
-    "spiral/core": "^2.7",
-    "spiral/database": "^2.7",
-    "spiral/files": "^2.7",
-    "spiral/tokenizer": "^2.7",
-    "spiral/reactor": "^2.7"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "~8.0",
-    "mockery/mockery": "^1.1",
-    "spiral/code-style": "^1.0"
-  },
-  "autoload": {
-    "psr-4": {
-      "Spiral\\Migrations\\": "src/"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "Spiral\\Migrations\\Tests\\": "tests/Migrations/",
-      "Spiral\\Migrations\\Fixtures\\": "tests/Fixtures/"
-    }
-  }
+    "name": "spiral/migrations",
+    "type": "library",
+    "description": "Database migrations, migration scaffolding",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Anton Titov / Wolfy-J",
+            "email": "wolfy.jd@gmail.com"
+        }
+    ],
+    "require": {
+        "php": ">=7.2",
+        "spiral/core": "^2.7",
+        "spiral/database": "^2.7",
+        "spiral/files": "^2.7",
+        "spiral/tokenizer": "^2.7",
+        "spiral/reactor": "^2.7"
+    },
+    "autoload": {
+        "files": [
+            "src/polyfill.php"
+        ],
+        "psr-4": {
+            "Spiral\\Migrations\\": "src"
+        }
+    },
+    "require-dev": {
+        "vimeo/psalm": "^4.9",
+        "phpunit/phpunit": "^8.5|^9.0",
+        "mockery/mockery": "^1.3",
+        "spiral/code-style": "^1.0"
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Spiral\\Migrations\\Tests\\": "tests/Migrations",
+            "Spiral\\Migrations\\Fixtures\\": "tests/Fixtures"
+        }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "2.3.x-dev"
+        }
+    },
+    "config": {
+        "sort-packages": true
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
